añadidas rutas para las diferentes secciones y aplicada la version detallada del producto al apretar "ver mas"

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,36 @@
     margin-bottom: 20px;
   }
 }
+
+.main-section {
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translate(-50%, 5%);
+}
+
+.left-side-product-box img {
+  width: 100%;
+}
+
+.right-side-pro-detail span {
+  font-size: 15px;
+}
+
+.right-side-pro-detail p {
+  font-size: 25px;
+  color: #a1a1a1;
+}
+
+.right-side-pro-detail .price-pro {
+  color: #E45641;
+}
+
+.right-side-pro-detail .tag-section {
+  font-size: 18px;
+  color: #5D4C46;
+}
+
+.row {
+  align-items: center;
+}
