--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,15 @@
   box-sizing: border-box;
 }
 
-.ItemList {
-  margin: 100px;
+.item-list {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
-@media (min-width: 768px) {
-  .ItemList {
-    width: 750px;
-}
-}
-@media (min-width: 992px) {
-  .ItemList {
-    width: 970px;
-}
-}
+
 @media (min-width: 1200px) {
-  .ItemList {
+  .item-list {
     width: 1170px;
 }
 }
@@ -35,7 +25,7 @@
 .loading {
   position: absolute;
   top: 35%;
-  left: 45%;
+  left: 30%;
   z-index: 1000;
   border: 16px solid #f3f3f3;
   border-top: 16px solid #3498db;
@@ -43,6 +33,11 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+}
+@media (min-width: 640px) {
+  .loading {
+    left: 45%;
+}
 }
 
 @keyframes spin {
@@ -65,7 +60,9 @@
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 7px 6px 12px -1px rgba(72, 72, 72, 0.77);
+  -webkit-box-shadow: 7px 6px 12px -1px rgba(72, 72, 72, 0.77);
+  -moz-box-shadow: 7px 6px 12px -1px rgba(72, 72, 72, 0.77);
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
@@ -77,13 +74,6 @@
     display: block;
     margin-bottom: 20px;
   }
-}
-
-.main-section {
-  position: absolute;
-  left: 50%;
-  top: 20%;
-  transform: translate(-50%, 5%);
 }
 
 .left-side-product-box img {
@@ -112,8 +102,14 @@
   align-items: center;
 }
 
-.posicionar {
-  position: absolute;
-  left: 15%;
-  top: 10%;
+.items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
